<resources>
    <string name="app_name">Cinema</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="login">Log In</string>
    <string name="remember_me">Remember Me</string>
    <string name="signin">SignIn</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="overview_sample">Peter Parker is unmasked and no longer able to separate his normal life from the high-stakes of being a super-hero. When he asks for help from Doctor Strange the stakes become even more dangerous, forcing him to discover what it truly means to be Spider-Man.</string>
    <string name="title_sample">Title : Spiderman No Way Home</string>
    <string name="seats_number">No of seats selected %1$d</string>
    <string name="selected_date">Selected Date is : %1$s </string>
    <string name="select_movie">Select Movie</string>
    <string name="overview">Overview :</string>
    <string name="title">Title:</string>
    <string name="image_of_movie_chosen">Image of movie chosen</string>
    <string name="vote_average">Vote Average :</string>
    <string name="release_date">Release Date :</string>
    <string name="email_cinema">Email : cinema@test.com</string>
    <string name="phone_number_cinema">Phone Number : +24547000000</string>
    <string name="submit">Submit</string>
    <string name="optional_contact_detail">Optional : Contact Detail</string>
    <string name="type_your_feedback">Type your feedback</string>
    <string name="payment_details">Booking Details:\n\tMovie Title : %1$s \n\tNumber of Seats : %2$d \n\tDate Picked: %3$s \n\tPrice: %4$d</string>
    <string name="opening_hours">Opening Hours: 8:00am-8:00pm \n\t\t\t\t\t\t\t\t\t\tSunday Excluded</string>
    <string name="seats_selection_title">Seats Selection</string>
    <string name="select_seat_description">Select your desired seat below</string>
    <string name="number_of_seats_selected">Number of seats selected 0</string>
    <string name="seat_1">seat 1</string>
    <string name="seat_2">seat 2</string>
    <string name="seat_3">seat 3</string>
    <string name="seat_4">seat 4</string>
    <string name="seat_5">seat 5</string>
    <string name="seat_6">seat 6</string>
    <string name="seat_7">seat 7</string>
    <string name="seat_8">seat 8</string>
    <string name="seat_9">seat 9</string>
    <string name="seat_10">seat 10</string>
    <string name="seat_11">seat 11</string>
    <string name="seat_12">seat 12</string>
    <string name="seat_13">seat 13</string>
    <string name="seat_14">seat 14</string>
    <string name="seat_15">seat 15</string>
    <string name="seat_16">seat 16</string>
    <string name="seat_17">seat 17</string>
    <string name="seat_18">seat 18</string>
    <string name="seat_19">seat 19</string>
    <string name="seat_20">seat 20</string>
    <string name="seat_21">seat 21</string>
    <string name="seat_22">seat 22</string>
    <string name="seat_23">seat 23</string>
    <string name="seat_24">seat 24</string>
    <string name="seat_25">seat 25</string>
    <string name="seat_26">seat 26</string>
    <string name="seat_27">seat 27</string>
    <string name="seat_28">seat 28</string>
    <string name="seat_29">seat 29</string>
    <string name="seat_30">seat 30</string>
    <string name="seat_31">seat 31</string>
    <string name="seat_32">seat 32</string>
    <string name="seat_33">seat 33</string>
    <string name="seat_34">seat 34</string>
    <string name="seat_35">seat 35</string>
    <string name="seat_36">seat 36</string>
    <string name="seat_37">seat 37</string>
    <string name="seat_38">seat 38</string>
    <string name="seat_39">seat 39</string>
    <string name="seat_40">seat 40</string>
    <string name="seat_41">seat 41</string>
    <string name="seat_42">seat 42</string>
    <string name="seat_43">seat 43</string>
    <string name="seat_44">seat 44</string>
    <string name="seat_45">seat 45</string>
    <string name="seat_46">seat 46</string>
    <string name="seat_47">seat 47</string>
    <string name="seat_48">seat 48</string>
    <string name="select_chair_button">Select Chair</string>
    <string name="location_of_cinema_application">Location of Cinema Application</string>
    <string name="rating_between_1_to_5">Give rating between 1.0 to 5.0</string>
    <string name="select_date">Select Date</string>
    <string name="go_to_payment">Go to Payment</string>
    <string name="tablayout_description">Has Three Tabs Movies, Contact, Bookings</string>
    <string name="text_press_to_retry">Press to Retry</string>
    <string name="floatingactionbar_description">Scroll to the top</string>
    <string name="img_currently_loading">Currently Loading</string>
    <string name="proceed_to_login">Already Registered? Click Here To LogIn</string>
    <string name="movie_image_description">Movie Image</string>
    <string name="booked_movie_image_txt">Booked Movie Image</string>
    <string name="btn_generate_qr">Generate QR</string>
    <string name="btn_retry">Retry</string>
    <string name="txt_error_message">Error message</string>
    <string name="btn_pay">pay</string>
    <string name="txtinput_phone_number">Enter Phone Number</string>
    <string name="feedback_error">Any feedback will be highly appreciated to improve services.</string>
    <string name="no_tickets">No tickets</string>


</resources>