<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.MovieDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/movie_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/image_of_movie_chosen"
            android:layout_margin="@dimen/dimension_8"
            tools:src="@drawable/movie" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimension_8">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/title_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimension_8"
                    android:text="@string/title"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_chainStyle="spread"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimension_8"
                    tools:text="Spiderman"
                    app:layout_constraintTop_toBottomOf="@id/title_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/overview_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimension_8"
                    android:text="@string/overview"
                    app:layout_constraintTop_toBottomOf="@id/title"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimension_8"
                    tools:text="@string/overview_sample"
                    app:layout_constraintTop_toBottomOf="@id/overview_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/vote_average_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimension_8"
                    android:text="@string/vote_average"
                    app:layout_constraintTop_toBottomOf="@id/overview"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/vote_average"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="8.4"
                    app:layout_constraintTop_toTopOf="@id/vote_average_label"
                    app:layout_constraintStart_toEndOf="@id/vote_average_label"
                    app:layout_constraintBottom_toBottomOf="@id/vote_average_label"
                    android:layout_margin="@dimen/dimension_8"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/release_date_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimension_8"
                    android:text="@string/release_date"
                    app:layout_constraintTop_toBottomOf="@id/vote_average_label"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="2022-01-28"
                    app:layout_constraintTop_toTopOf="@id/release_date_label"
                    app:layout_constraintStart_toEndOf="@id/release_date_label"
                    app:layout_constraintBottom_toBottomOf="@id/release_date_label"
                    android:layout_margin="@dimen/dimension_8"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/select_movie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimension_8"
            android:text="@string/select_movie" />
    </LinearLayout>


</androidx.core.widget.NestedScrollView>