<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ticket_card"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dimension_8"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/filmImage"
            android:contentDescription="@string/booked_movie_image_txt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimension_150"
            android:scaleType="fitXY"
            tools:src="@drawable/loading_image" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dimension_8">

            <TextView
                android:id="@+id/filmTitle"
                style="@style/TextAppearance.Material3.TitleMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                tools:text="@string/title_sample" />

            <TextView
                android:id="@+id/dateBooked"
                style="@style/TextAppearance.Material3.BodyMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimension_8"
                android:layout_below="@id/filmTitle"
                android:layout_alignParentStart="true"
                android:textColor="?android:attr/textColorSecondary"
                tools:text="Date : 12/2/2022" />

            <TextView
                android:id="@+id/numberOfSeats"
                style="@style/TextAppearance.Material3.BodyMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/filmTitle"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/dimension_8"
                android:gravity="end|center_vertical"
                android:layout_toEndOf="@id/dateBooked"
                android:textColor="?android:attr/textColorSecondary"
                tools:text="Number of Seats: 4" />

            <TextView
                android:id="@+id/ticketPrice"
                style="@style/TextAppearance.Material3.BodyMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimension_8"
                android:textStyle="bold"
                android:layout_centerInParent="true"
                android:layout_below="@id/numberOfSeats"
                android:textColor="?android:attr/textColorSecondary"
                tools:text="Price : 1000Ksh" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimension_8"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                style="?attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimension_8"
                android:text="@string/btn_generate_qr" />
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>