<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.MovieFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/md_theme_light_primaryContainer">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/CardView.Light">

            <SearchView
                android:id="@+id/search"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimension_40"
                android:layout_margin="@dimen/dimension_8"
                android:background="@drawable/search_background"
                android:focusableInTouchMode="true"
                android:imeOptions="actionSearch"
                android:padding="8dp"
                android:queryBackground="@color/md_theme_light_onSecondary"
                android:queryHint="Search For A Movie"
                tools:targetApi="lollipop" />
        </androidx.appcompat.widget.Toolbar>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewMovies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:paddingStart="@dimen/dimension_8"
                android:paddingTop="@dimen/dimension_8"
                android:paddingEnd="@dimen/dimension_8"
                android:paddingBottom="?actionBarSize"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="2"
                tools:listitem="@layout/list_item_movie" />
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <TextView
            android:id="@+id/retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_press_to_retry"
            android:textAlignment="center"
            android:visibility="gone"
            app:drawableTopCompat="@drawable/ic_connection_error"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/reload"
            android:layout_width="@dimen/dimension_150"
            android:layout_height="@dimen/dimension_150"
            android:contentDescription="@string/img_currently_loading"
            android:src="@drawable/loading_image"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/scrollIndicatorUp"
            style="@style/FloatingActionButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimension_8"
            android:contentDescription="@string/floatingactionbar_description"
            android:src="@drawable/ic_baseline_arrow_upward_24"
            android:visibility="gone"
            app:fabSize="mini"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>